package art.lapov.project2dev.entity.enums;

public enum ApplicationStatus {
    PENDING,
    ACCEPTED,
    REFUSED,
    WITHDRAWN
}
