package art.lapov.project2dev.entity.enums;

public enum ProjectStatus {
    OPEN,
    IN_PROGRESS,
    CLOSED
}
