@startuml
skinparam classAttributeIconSize 0
title Project ⇄ Developer — UML Class Diagram

' =======================
' Base Entities (Users)
' =======================
class User {
  +id : Long
  +name : String
  +email : String
  +passwordHash : String
}

class ProjectOwner {
  +organization : String
}

class Developer {
  +bio : String
  +yearsOfExperience : int
}

User <|-- ProjectOwner
User <|-- Developer

' =======================
' Projects
' =======================
class Project {
  +id : Long
  +title : String
  +description : String
  +createdAt : LocalDate
  +deliveryDate : LocalDate
  +budget : int
  +status : ProjectStatus
}

enum ProjectStatus {
  OPEN
  IN_PROGRESS
  CLOSED
}

' =======================
' Themes
' =======================
class Theme {
  +id : Long
  +name : String
}

Project "1" -- "0..1" Theme : theme
ProjectOwner "1" -- "0..*" Project : publishes >

' =======================
' Applications
' =======================
class Application {
  +id : Long
  +appliedAt : LocalDateTime
  +message : String
  +status : ApplicationStatus
}

enum ApplicationStatus {
  PENDING
  ACCEPTED
  REFUSED
  WITHDRAWN
}

Project "1" -- "0..*" Application
Developer "1" -- "0..*" Application

' =======================
' Skills
' =======================
class Skill {
  +title : String
  +description : String
}

Developer "*" -- "*" Skill

' =======================
' Repositories (JPA/Hibernate)
' =======================
interface GenericRepository<T> {
  +findById(id : Long) : T
  +findAll() : List<T>
  +save(entity : T) : void
  +update(entity : T) : void
  +delete(entity : T) : void
}

interface ProjectRepository
interface DeveloperRepository
interface ProjectOwnerRepository
interface ApplicationRepository

GenericRepository <|.. ProjectRepository
GenericRepository <|.. DeveloperRepository
GenericRepository <|.. ProjectOwnerRepository
GenericRepository <|.. ApplicationRepository

@enduml